# Lucarne-238

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.cn.md  README.md
.cargo/: config.toml
.github/: release.yml
Formula/: lucarned.rb
agent-sessions/: AGENTS.md  Cargo.toml
agent-sessions/benches/: claude_parse.rs  codex_agent_session.rs  codex_parse.rs  copilot_parse.rs
agent-sessions/src/: agent.rs  bash.rs  error.rs
agent-sessions/src/agent_session/: mod.rs  projection.rs
